--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
     "@types/node": "^22.9.3",
     "ts-standard": "^12.0.2",
     "typescript": "^5.7.2"
+  },
+  "dependencies": {
+    "consola": "^3.2.3",
+    "dotenv": "^16.4.5",
+    "mineflayer": "^4.23.0",
+    "mineflayer-pathfinder": "^2.4.5"
   }
 }
