--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "consola": "^3.2.3",
     "dotenv": "^16.4.5",
     "mineflayer": "^4.23.0",
-    "mineflayer-pathfinder": "^2.4.5"
+    "mineflayer-pathfinder": "^2.4.5",
+    "prismarine-viewer": "^1.28.0"
   }
 }
