feat(tree): implement auto tree factory

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "mineflayer": "^4.23.0",
     "mineflayer-pathfinder": "^2.4.5",
+    "prismarine-item": "^1.15.0",
     "prismarine-viewer": "^1.28.0"
   }
 }
